saude-homolog/sidekiq-deployment-simple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidekiq
  namespace: saude-homolog
  labels:
    app: sidekiq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sidekiq
  template:
    metadata:
      labels:
        app: sidekiq
    spec:
      serviceAccountName: cuidar-sigtap-sa
      containers:
        - name: sidekiq
          image: 961341521437.dkr.ecr.sa-east-1.amazonaws.com/saude-publica-web:master-205
          command: ["/bin/bash", "-c"]
          args:
            - |
              echo "Aguardando banco de dados..."
              sleep 15

              echo "Iniciando Sidekiq..."
              # Configurar rbenv
              export RBENV_ROOT=/usr/local/rbenv
              export PATH="${RBENV_ROOT}/bin:${RBENV_ROOT}/shims:${PATH}"
              eval "$(rbenv init - bash)"

              bundle exec sidekiq -C config/sidekiq.yml
          resources:
            requests:
              cpu: "400m"
              memory: "1Gi"
            limits:
              cpu: "800m"
              memory: "2Gi"

      restartPolicy: Always
