saude-homolog/triagem-events-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: triagem-events
  namespace: saude-homolog
  labels:
    app: triagem-events
spec:
  type: ClusterIP
  selector:
    app: triagem-events
  ports:
    - name: sse
      port: 9293
      targetPort: sse
